--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Build Docker Image 
+name: Build Docker Image
 
 on:
   push:
@@ -9,24 +9,23 @@ on:
     branches: [ "main" ]
     paths:
       - 'Dockerfile'
+  workflow_dispatch:
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/dsci310-ia3--docker:latest 
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/dsci310-ia3--docker:latest
 
-    - name: Push the Docker image
-      run: docker push raghav194/dsci310-ia3--docker:latest 
+      - name: Push the Docker image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/dsci310-ia3--docker:latest
